--- a/Snys/project.properties
+++ b/Snys/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../../../../mnt/cold_storage/Dropbox/eclipse_workspaces/android/appcompat_v7
+android.library.reference.1=../../../eclipse_workspaces/android/appcompat_v7
