Implemented NoteActivity, allowing notes to be altered and (once the option is added to parent activities) created from within the client.

--- a/Snys/AndroidManifest.xml
+++ b/Snys/AndroidManifest.xml
@@ -26,11 +26,14 @@
         </activity>
         <activity
             android:name=".GroupActivity"
-            android:label="@string/title_activity_group"
-            android:parentActivityName=".MainActivity" >
+            android:label="@string/title_activity_group" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
+        </activity>
+        <activity
+            android:name=".NoteActivity"
+            android:label="@string/title_activity_note" >
         </activity>
     </application>
 
