Added appropriate support for notifications with "HIDE" status: the note fragment hides them by default unless a menu option is selected to change this. Also, added some of the menu items needed by the various activities.

--- a/Snys/project.properties
+++ b/Snys/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-19
 android.library.reference.1=../../../eclipse_workspaces/android/appcompat_v7
+android.library.reference.2=../../../eclipse_workspaces/android_lap/android-support-v7-appcompat
