--- a/Snys/bin/AndroidManifest.xml
+++ b/Snys/bin/AndroidManifest.xml
@@ -16,6 +16,10 @@
             android:name="android.permission.WRITE_SYNC_SETTINGS"/>
     <uses-permission
             android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+    <uses-permission
+        	android:name="android.permission.VIBRATE"/>
+    <uses-permission
+        	android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
         android:allowBackup="true"
@@ -40,7 +44,8 @@
         </activity>
         <activity
             android:name=".NoteActivity"
-            android:label="@string/title_activity_note" >
+            android:label="@string/title_activity_note" 
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         
     
@@ -74,6 +79,18 @@
             <meta-data android:name="android.content.SyncAdapter"
                     android:resource="@xml/syncadapter" />
         </service>
+        
+        <service android:name=".AlarmService" />
+        
+        <receiver
+            android:name=".BootReceiver"
+            android:enabled="false" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" >
+                </action>
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
